Complete switch to hardkernel drivers

--- a/sound/soc/aml/m8/Kconfig
+++ b/sound/soc/aml/m8/Kconfig
@@ -12,6 +12,20 @@ menuconfig SND_AML_M8
 	select SND_SOC_AMLT9015S
 	select SND_SOC_ES8323
 
+menuconfig SND_ODROID_HDMI
+	tristate "ODROID-SND-HDMI card"
+	depends on SND_AML_M8_SOC
+	
+menuconfig SND_ODROID_DAC
+	tristate "ODROID-SND-DAC card"
+	depends on SND_AML_M8_SOC
+	select SND_SOC_PCM5102
+
+menuconfig SND_ODROID_DAC2
+	tristate "ODROID HiFi-Shield2(pcm5242) Support"
+	depends on SND_AML_M8_SOC
+	select SND_SOC_PCM512x_I2C
+	
 if SND_AML_M8
 
 config SND_AML_SPLIT_MODE
