--- a/arch/arm64/boot/dts/meson64_odroidc2.dts
+++ b/arch/arm64/boot/dts/meson64_odroidc2.dts
@@ -587,13 +587,6 @@
 	pcm_dai: PCM {
 		#sound-dai-cells = <0>;
 		compatible = "amlogic, aml-pcm-dai";
-		pinctrl-names = "aml_audio_btpcm";
-		pinctrl-0 = <&audio_btpcm_pins>;
-		clocks = <&clock CLK_MPLL0>,
-			<&clock CLK_PCM_MCLK>,
-			<&clock CLK_PCM_SCLK>;
-		clock-names = "mpll0", "pcm_mclk", "pcm_sclk";
-		pcm_mode = <1>;	/* 0=slave mode, 1=master mode */
         };
 	i2s_plat: i2s_platform {
 		compatible = "amlogic, aml-i2s";
@@ -621,42 +614,50 @@
 		compatible = "amlogic, aml_dummy_codec";
 		status = "okay";
 	};
-	aml_m8_snd {
-		compatible = "aml, aml_snd_m8";
+    pcm5102_codec:pcm5102{
+		#sound-dai-cells = <0>;
+		compatible = "hardkernel, pcm5102";
+		status = "okay";
+	};
+	odroid_hdmi {
+		compatible = "sound_card, odroid_hdmi";
 		status = "okay";
 		aml-sound-card,format = "i2s";
-		aml_sound_card,name = "AML-M8AUDIO";
-		aml,audio-routing =
-				"Ext Spk","LOUTL",
-				"Ext Spk","LOUTR";
-
-		mute_gpio-gpios = <&gpio GPIOH_3 0>;
-		hp_disable;
-		hp_paraments = <800 300 0 5 1>;
-		pinctrl-names = "aml_snd_m8";
+		aml_sound_card,name = "ODROID-HDMI";
+		cpu_list = <&i2sdai0>;
+		codec_list = <&dit0>;
+		plat_list = <&i2s_plat>;
+		i2sdai0: i2sdai0 {
+			sound-dai = <&i2s_dai>;
+		};
+		dit0: dit0 {
+			sound-dai = <&spdif_codec>;
+		};
+    };
+	odroid_dac {
+		compatible = "sound_card, odroid_dac";
+		status = "okay";
+		aml-sound-card,format = "i2s";
+		aml_sound_card,name = "ODROID-DAC";
+		pinctrl-names = "aml_snd_i2s";
 		pinctrl-0 = <&audio_pins>;
-		cpu_list = <&cpudai0 &cpudai1 &cpudai2>;
-		codec_list = <&codec0 &codec1 &codec2>;
-		plat_list = <&i2s_plat &i2s_plat &pcm_plat>;
+		cpu_list = <&cpudai0>;
+		codec_list = <&codec0>;
+		plat_list = <&i2s_plat>;
 		cpudai0: cpudai0 {
 			sound-dai = <&i2s_dai>;
 		};
-		cpudai1: cpudai1 {
-			sound-dai = <&spdif_dai>;
-		};
-		cpudai2: cpudai2 {
-			sound-dai = <&pcm_dai>;
-		};
 		codec0: codec0 {
-			sound-dai = <&dummy_codec>;
-		};
-		codec1: codec1 {
-			sound-dai = <&spdif_codec>;
-		};
-		codec2: codec2 {
-			sound-dai = <&pcm_codec>;
+            sound-dai = <&pcm5102_codec>;
 		};
 	};
+	odroid_dac2{
+		compatible = "sound_card, odroid_dac2";
+		aml,sound_card = "ODROID-DAC2";
+		pinctrl-names = "odroid_i2s";
+		pinctrl-0 = <&audio_pins>;
+		status = "okay";
+    };
 	/* END OF AUDIO board specific */
 
 	gpio_keypad{
@@ -836,11 +837,11 @@
         #clock-cells = <0>;
     };
 };
-/*
+
 &i2c_b {
   status = "okay";
 };
-*/
+
 
 &i2c_slave {
 	status = "disabled";
@@ -856,14 +857,6 @@
 		amlogic,setmask=<AO 0x10000>;	/*spdif_out*/
 		amlogic,clrmask=<AO 0x40000>;	/*spdif_out*/
 		amlogic,pins ="GPIOAO_6";		/*spdif_out*/
-	};
-
-	audio_btpcm_pins:audio_btpcm_pins{
-		/* BT PCM PINMUX SETTING*/
-		amlogic,setmask=<3 0x78000000>;
-		amlogic,clrmask=<3 0x803280
-				4 0xc0>;
-		amlogic,pins ="GPIOX_8", "GPIOX_9", "GPIOX_10", "GPIOX_11";
 	};
 
         led_pins: led_pin {
